# negate

./: Cargo.toml  README.md
.github/workflows/: check_and_test.yml
src/: args.rs  error.rs  generator.rs  lib.rs
tests/: test.rs
