[package]
name = "negate"
version = "0.1.1"
edition = "2018"
authors = ["Vinícius Rodrigues Miguel <vrmiguel99@gmail.com>"]
readme = "README.md"
repository = "https://github.com/vrmiguel/negate"
documentation = "https://docs.rs/negate"
license = "MIT"
keywords = ["macro", "proc-macro", "boolean"]
categories = ["rust-patterns"]
description = "Attribute macro that generates negated versions of functions that return booleans."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version="1.0.75", features = ["full","fold"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.26", default-features = false }